Thu Apr 27 21:36:01 1995  Chris Provenzano  (proven@mit.edu)

	* auth_con.c (krb5_auth_con_getaddrs() and krb5_auth_con_getflags()):
		Added for completeness.
	* mk_req_ext.c (krb5_mk_req_extended()) : Don't send the 
		AP_OPTS_USE_SUBKEY option over the wire.

Thu Apr 27 17:40:20 1995 Keith Vetter (keithv@fusion.com)

	* adm_rw.c, mk_cred.c, rd_cred.c:
	   malloc on the PC must be size SIZE_T not int32.
	* adm_rw.c: krb5_free_adm_data second argument now a krb5_int32.

Thu Apr 27 16:33:17 EDT 1995	Paul Park	(pjpark@mit.edu)

	* mk_priv.c	- Back out previous change which always put in
			  timestamp, regardless of DO_TIME setting and
			  instead, clear out the replaydata before calling
			  mk_priv_basic from mk_priv.
	* mk_safe.c	- Same replaydata fix.

Thu Apr 26 15:59:51 EDT 1995	Paul Park	(pjpark@mit.edu)

	* Add adm_rw.c - routines to read and write commands from/to the
	  administrative (kpasswd/kadmin) server.

Wed Apr 27 11:30:00 1995 Keith Vetter (keithv@fusion.com)

	* init_ctx.c: krb5_init_context wasn't checking return values.
	* mk_req.c: deleted unused local variable.

Wed Apr 26 22:49:18 1995  Chris Provenzano  (proven@mit.edu)

	* gc_via_tgt.c, and gc_2tgt.c : Removed.
	* Makefile.in, gc_via_tkt.c, gc_frm_kdc.c, and, int-proto.h : 
		Replaced get_cred_via_tgt() and get_cred_via_2tgt()
		with more general function get_cred_via_tkt().

Tue Apr 25 21:58:23 1995  Chris Provenzano  (proven@mit.edu)

	* Makefile.in : Added gc_via_tkt.c and removed get_fcreds.c
	* auth_con.c (krb5_auth_con_setaddrs()) : Fixed so it allocates 
		space and copies addresses, not just pointer.
	* mk_cred.c: Completely rewritten from sources donated by asriniva.
	* rd_cred.c: Completely rewritten from sources donated by asriniva.
	* mk_priv.c (krb5_mk_priv()), mk_safe.c (krb5_mk_safe()), 
	  rd_priv.c (krb5_rd_priv()), and rd_safe (krb5_rd_safe()) : 
		Try using a subkey before using the session key for encryption.