@@ -1,3 +1,8 @@
+Fri Apr 28 01:44:51 1995  Chris Provenzano  (proven@mit.edu)
+
+        * send_tgs.c (krb5_send_tgs()), gc_via_tkt.c (krb5_get_cred_via_tkt()):
+		Removed krb5_cksumtype argument.
+
 Thu Apr 27 21:36:01 1995  Chris Provenzano  (proven@mit.edu)
 
 	* auth_con.c (krb5_auth_con_getaddrs() and krb5_auth_con_getflags()):
